Fixed Overflowing Elements

--- a/assets/css/consulting.css
+++ b/assets/css/consulting.css
@@ -34,7 +34,7 @@ nav{
 }
 .video-container video{
     min-width: 100%;
-    min-height: 100%;
+    height: 100vh;
     position: absolute;
     object-fit: cover;
     z-index: -9;
