--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,12 +32,10 @@
     box-sizing: border-box;
 }
 
-html{
+html, body{
     scroll-behavior: smooth;
-}
-
-body{
     overflow-x: hidden;
+    position:relative
 }
 
 a {
